# dvsg

./: .gitignore  LICENSE  README.md  environment-manga.yml  environment.yml  pyproject.toml
demo/: dvsg_demo.ipynb
src/dvsg/: calculations.py  modelling.py  plotting.py  preprocessing.py
