[build-system]
requires = ["setuptools>=61,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dvsg"
version = "0.1.0"
description = "Calculate the kinematic disturbance parameter ΔV⋆−g"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
  {name = "Jonah Powley", email = "jmp258@cam.ac.uk"},
]
dependencies = [
  "numpy>=1.24,<2",
  "scipy>=1.9",
  "astropy>=6",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/jmpowley/dvsg"
Repository = "https://github.com/jmpowley/dvsg"
Issues = "https://github.com/jmpowley/dvsg/issues"

[project.optional-dependencies]
manga = [
  "packaging==20.9",
  "setuptools<81",
  "marshmallow<4",
  "webargs<6",
  "sdss-marvin>=2.8.2",
  "sdss-mangadap>=4.3.0",
]
dev = [
  "pytest>=7",
]
build = [
  "build>=1.4",
  "twine>=5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
